cluster/apps/pfire/graphql-mesh/graphql-mesh.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphql-mesh
  namespace: pfire
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}/oauth2/start
    hajimari.io/enable: "true"
    hajimari.io/icon: "simple-icons:graphql"
    hajimari.io/group: "pfire"
spec:
  rules:
    - host: graphql-mesh.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: graphql-mesh
                port: 
                  number: 80
  tls:
    - hosts:
      - graphql-mesh.${SECRET_DOMAIN}
---
kind: Service
apiVersion: v1
metadata:
  name: graphql-mesh
  namespace: pfire
spec:
  selector:
    app: graphql-mesh
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql-mesh
  namespace: pfire
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: graphql-mesh
  replicas: 1
  template:
    metadata:
      labels:
        app: graphql-mesh
    spec:
      volumes:
      - name: tz-config
        hostPath:
          path: /etc/localtime
      - name: graphql-mesh-meshrc
        configMap:
          name: graphql-mesh-meshrc
          defaultMode: 420
      containers:
      - name: graphql-mesh-docker
        image: ghcr.io/marx2/graphql-mesh-docker:1.0.7
        resources:
          limits:
            cpu: 2000m
            memory: 512Mi
          requests:
            cpu: 10m
            memory: 128Mi
        #env:
        #  - name: POSTGRES_USER
        #    value: "postgres"
        #  - name: POSTGRES_PASSWORD
        #    value: "${SECRET_POSTGRESQL_PASS}"
        ports:
        - containerPort: 80
          name: http-api
        volumeMounts:
        - mountPath: "/etc/localtime"
          readOnly: true
          name: tz-config
        - name: graphql-mesh-meshrc
          mountPath: /home/node/app/.meshrc.yaml
          subPath: .meshrc.yaml
